syntax = "proto3";

package netty;
option java_package = "com.example.tutorial";
option java_outer_classname = "SubscribeRespProto";

message SubscribeResp {
    int32 subReqID = 1;
    int32 respCode = 2;
    string desc = 3;
}
